fixed wording, and top spacing

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -47,9 +47,8 @@ html {
 }
 
 h1, p {
-    margin-top: 20px;
     letter-spacing: 110%;
-    word-spacing: 300%;
+    word-spacing: 200%;
     line-height: 200%;
 }
 
@@ -63,7 +62,7 @@ h1, h2, h3, h4, h5, h6, p, li, div, nav, html {
 }
 
 p {
-    font-size: 18px;
+    font-size: 17px;
     text-align: justify;
     font-family: 'Open Sans', sans-serif;
 }
